plugins {
  id 'java'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17);
  }
}

tasks.withType(JavaCompile) {
  options.compilerArgs += '--enable-preview'
}

tasks.register('removeUnusedImports', JavaExec) {
  classpath = files("${rootDir}/lib/google-java-format-1.12.0-all-deps.jar");
  jvmArgs = ["--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
             "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
             "--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
             "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
             "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"]
  args = ["--fix-imports-only",
       "${rootDir}/src/main/java/example/Main.java"]
}
